syntax = "proto3";

option go_package = "github.com/benjamin-rood/x-grpc/fileupload";

package fileupload;

service Uploader {
  rpc UploadFile (stream UploadRequest) returns (UploadResponse);
}

message UploadRequest {
  string file_name = 1;
  bytes file_chunk = 2;
}

message UploadResponse {
  string file_name = 1;
  uint32 size = 2; // in bytes
}
